# calories-calc

./: .gitignore  .travis.yml  Caddyfile  Cargo.toml  Makefile  README.md  calories-calc-3d32a964aad6bb1c.js  calories-calc-3d32a964aad6bb1c_bg.wasm  calories-calc-47f4cbd263b9204d.js  calories-calc-47f4cbd263b9204d_bg.wasm  calories-calc-8b3633738d594f6c.js  calories-calc-8b3633738d594f6c_bg.wasm  calories-calc-8ef5fafbb94066e9.js  calories-calc-8ef5fafbb94066e9_bg.wasm  calories-calc-d3f54586d545d8e.js  calories-calc-d3f54586d545d8e_bg.wasm  calories_calc.d.ts  calories_calc.js  calories_calc_bg.wasm  index.html  style-8ece9f3da7d13502.css  style.css
.github/workflows/: check.yml  deploy.yml
rust/: Cargo.toml
rust/src/: display.rs  expr.rs  helpers.rs  lib.rs  utils.rs  wasm.rs
rust/src/expr/: parser.rs
src/: main.rs  state.rs
src/expr/: mod.rs  parser.rs
static/: index.html  index.js  style.css
