[package]
name = "calories-calc"
version = "0.2.0"
license = "GPL-3.0-or-later"
edition = "2021"
publish = false

[dependencies]
combine = "4.6.4"
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.57", features = ["HtmlButtonElement", "HtmlDivElement"] }
yew = "0.19.3"

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
