[package]
name = "calories-calc"
version = "0.1.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
combine = { version = "3.5.2", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
lazy_static = "1.1.0"
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = [
    "Document",
    "DocumentFragment",
    "Element",
    "Event",
    "EventTarget",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTemplateElement",
    "KeyboardEvent",
    "Node",
    "UiEvent",
    "Window",
]
